# rakeback-engine

./: .dockerignore  .env.docker  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  DEMO_SCRIPT.md  LOCAL_SETUP.md  Makefile  PUSH_AND_PR.md  README.md  docker-compose.yml  mypy.ini
backend/: Dockerfile  alembic.ini  calc_revenue.py  config.py  debug_stake.py  debug_stake2.py  debug_stake3.py  pyproject.toml
backend/app/: dependencies.py  main.py
backend/app/routes/: attributions.py  completeness.py  conversions.py  exports.py  health.py  partners.py  rakeback.py
backend/app/schemas/: attributions.py  common.py  completeness.py  conversions.py  exports.py  partners.py  rakeback.py
backend/config/: chain.example.yaml  chain.yaml  database.example.yaml  database.yaml  processing.example.yaml
backend/config/participants/: creative_builds.example.yaml  talisman.example.yaml
backend/db/: connection.py  enums.py  models.py
backend/migrations/: 001_initial_schema.sql  env.py  migrate.py  script.py.mako
backend/overrides/: demo_snapshot.csv  demo_yield.csv  live_yield.csv
backend/rakeback/services/: _helpers.py  _types.py  aggregation.py  attribution.py  chain_client.py  errors.py  export.py  ingestion.py  participant_service.py  rules_engine.py  tao_price_service.py
backend/rakeback/services/schemas/: __init__.py  chain.py  results.py
backend/scripts/: generate_models.py  seed_sample_data.py
backend/src/rakeback/: __init__.py
backend/src/rakeback/api/: __init__.py  app.py
backend/src/rakeback/cli/: __init__.py  main.py
backend/src/rakeback/config/: __init__.py  settings.py
backend/src/rakeback/database/: __init__.py  connection.py
backend/src/rakeback/models/: __init__.py  base.py  block_attribution.py  block_snapshot.py  block_yield.py  conversion.py  enums.py  (+6 more)
backend/tests/: conftest.py  test_aggregation.py  test_attribution.py  test_export.py  test_helpers.py  test_participant_service.py  test_routes.py  test_rules_engine.py
backend/worker/: export_ledger.py  fetch_prices.py  ingest_blocks.py  run_aggregation.py  run_attribution.py
(+63 files in other folders)
